Fixed so example works properly when child.domain and parent.domain are configured to point to localhost

--- a/child.html
+++ b/child.html
@@ -10,7 +10,7 @@
     
     $(function() {    
     // Register this as a potential child of the parent.domain
-      $.composite({id:"CLIFTONEXAMPLE",mode:"child",parentDomain:"http://ec2-46-51-137-148.eu-west-1.compute.amazonaws.com",domain:"http://localhost"});                       
+      $.composite({id:"LOCALEXAMPLE",mode:"child",parentDomain:"http://parent.domain",domain:"http://child.domain"});                       
     });          
     </script> 
   </head> 
