--- a/child4.html
+++ b/child4.html
@@ -6,11 +6,12 @@
   <script type="text/javascript" src="js/composite/composite-child-ui.js"></script>     
   <script type="text/javascript" src="js/composite/composite-child.js"></script>     
   <script type="text/javascript" src="js/composite/composite.js"></script>        
-    <script>      
+     <script>      
+    
     $(function() {    
     // Register this as a potential child of the parent.domain
-    $.composite({id:"external_domain_with_sdk",mode:"child",parentDomain:"http://localhost",domain:"http://child.domain"});                       
-      });          
+      $.composite({id:"LOCALEXAMPLE",mode:"child",parentDomain:"http://parent.domain",domain:"http://child.domain"});                       
+    });          
     </script> 
   </head> 
   <body> 
